--- a/HiddenFBpictures/app/build.gradle
+++ b/HiddenFBpictures/app/build.gradle
@@ -28,5 +28,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
