support multiples screens

--- a/HiddenFBpictures/app/src/main/AndroidManifest.xml
+++ b/HiddenFBpictures/app/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" />
-        <activity android:name=".MainPictures"></activity>
+        <activity android:name=".Main2Activity" android:screenOrientation="portrait" />
+        <activity android:name=".MainPictures" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
