add the comments to my code

--- a/HiddenFBpictures/app/src/main/AndroidManifest.xml
+++ b/HiddenFBpictures/app/src/main/AndroidManifest.xml
@@ -31,15 +31,15 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activites.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" android:screenOrientation="portrait" />
-        <activity android:name=".MainPictures" android:screenOrientation="portrait"></activity>
+        <activity android:name=".activites.Main2Activity" android:screenOrientation="portrait" />
+        <activity android:name=".activites.MainPictures" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
